--- a/ModernCollectionViewSample/Base.lproj/Main.storyboard
+++ b/ModernCollectionViewSample/Base.lproj/Main.storyboard
@@ -8,10 +8,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Apps Collection View Controller-->
+        <!--Menu View Controller-->
         <scene sceneID="Bf1-3e-Ngp">
             <objects>
-                <collectionViewController id="Kk9-0q-nNC" customClass="AppsCollectionViewController" customModule="ModernCollectionViewSample" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zip-9E-2FS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <collectionViewController id="Kk9-0q-nNC" customClass="MenuViewController" customModule="ModernCollectionViewSample" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="VBZ-gX-nJ6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -39,13 +40,13 @@
                     </collectionView>
                     <navigationItem key="navigationItem" id="eCU-2F-46N"/>
                 </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Zip-9E-2FS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1091" y="44"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Luk-a1-5BM">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="68G-Ia-w5s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Jr-d0-5hD" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OFm-nW-Jhr">
@@ -57,7 +58,6 @@
                         <segue destination="Kk9-0q-nNC" kind="relationship" relationship="rootViewController" id="lgg-i0-saA"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="68G-Ia-w5s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="402.89855072463769" y="43.526785714285715"/>
         </scene>
